# chit-chat

./: .gitignore  README.md  pyproject.toml
src/chit/: chat.py  database.py
src/chit/templates/: index.html
