[tool.poetry]
name = "chit-chat"
version = "0.1.0"
description = ""
authors = ["dnl-strnl <129630837+dnl-strnl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ollama = "^0.1.6"
langchain = "^0.1.8"
whisper = "^1.1.10"
milvus = "^2.3.8"
faiss-cpu = "^1.7.4"
tiktoken = "^0.6.0"
transformers = "^4.38.1"
pillow = "^10.2.0"
torch = "^2.2.0"
sentencepiece = "^0.2.0"
pyautogen = "^0.2.14"
chromadb = "^0.4.23"
langchain-community = "^0.0.24"
hydra-core = "^1.3.2"
sentence-transformers = "^2.4.0"
langchain-openai = "^0.0.7"
flask = "^3.1.0"
flask-cors = "^5.0.0"

[[tool.poetry.packages]]
include = "chit"
from = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
